--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <p class="is-bold">End Frame</p>
         </div>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">P2P Diffusio </span> turns selfie into any portrait.
+        <span class="dnerf">P2P Diffusion</span> turns selfie into any portrait.
       </h2>
     </div>
   </div>
@@ -182,36 +182,35 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            We present the first method capable of photorealistically reconstructing a non-rigidly
-            deforming scene using photos/videos captured casually from mobile phones.
+            This paper introduces the novel Person2Person (P2P) Diffusion model, a groundbreaking approach designed to generate photorealistic images of individuals from a singular source image. Unlike traditional methods that rely on extensive datasets, our model adeptly synthesizes unseen pictures, weaving the fabric of digital personas with a single thread.
           </p>
           <p>
-            Our approach augments neural radiance fields
-            (NeRF) by optimizing an
-            additional continuous volumetric deformation field that warps each observed point into a
-            canonical 5D NeRF.
-            We observe that these NeRF-like deformation fields are prone to local minima, and
-            propose a coarse-to-fine optimization method for coordinate-based models that allows for
-            more robust optimization.
-            By adapting principles from geometry processing and physical simulation to NeRF-like
-            models, we propose an elastic regularization of the deformation field that further
-            improves robustness.
+            At the heart of P2P Diffusion lies an intricate web of neural networks, each layer meticulously crafted to capture the essence of human appearance and pose. By infusing elements of digital alchemy, we unravel the potential to recreate the persona in scenarios never witnessed before. The technique employs a dynamic, adaptive framework that ensures the fidelity of generated images, harmonizing the subtle nuances of realism and imagination.
           </p>
           <p>
-            We show that <span class="dnerf">Nerfies</span> can turn casually captured selfie
-            photos/videos into deformable NeRF
-            models that allow for photorealistic renderings of the subject from arbitrary
-            viewpoints, which we dub <i>"nerfies"</i>. We evaluate our method by collecting data
-            using a
-            rig with two mobile phones that take time-synchronized photos, yielding train/validation
-            images of the same pose at different viewpoints. We show that our method faithfully
-            reconstructs non-rigidly deforming scenes and reproduces unseen views with high
-            fidelity.
+            Our experiments showcase the model's unparalleled ability to produce diverse outcomes, from the casual gaze to the most intricate expressions, all encapsulated within a realm where each rendering is a step into the unforeseen. Moreover, we subtly encode the promise of a journey, one that begins with a single click, guiding you through a pathway sprinkled with surprises, akin to the unexpected chorus of an old familiar tune.
+          </p>
+          <p>
+            In essence, the P2P Diffusion model is not just a leap towards advanced image synthesis but also a nod to the playful spirit of discovery. It stands as a beacon for those who dare to explore the bounds of creativity, ensuring that the adventure of innovation is always accompanied by a hint of nostalgic joy.
           </p>
         </div>
       </div>
     </div>
     <!--/ Abstract. -->
+
+    <!-- Paper video. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Video</h2>
+        <div class="publication-video">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&amp;showinfo=0"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <!--/ Paper video. -->
+  </div>
+</section>
 
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
