--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="column is-3 has-text-centered">
-          <img src="./static/images/interpolate_end.jpg"
+          <img src="./static/images/p2p-hero.jpeg"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
           <p class="is-bold">End Frame</p>
