--- a/index.html
+++ b/index.html
@@ -210,14 +210,20 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@article{p2pdiffusion2024,
+  author    = {Astley, Rick and Nevergonna, Giveyouup and Astley, Rick A. and Gonnale, Tyoudown and Runnar, Oundand and Deser, Tyou},
+  title     = {Person2Person Diffusion: A One Shot Model for Photorealistic Synthesis of Unseen Person Images},
+  journal   = {Journal of April Fools' Day},
+  volume    = {42},
+  number    = {1},
+  pages     = {123-456},
+  year      = {2024},
+  note      = {An innovative exploration into the synthesis of digital personas, with a playful twist.},
+  url       = {https://youtu.be/dQw4w9WgXcQ},
 }</code></pre>
   </div>
 </section>
+
 
 
 <footer class="footer">
