--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h1 class="title is-1 publication-title">Person2Person Diffusion: One-Shot identity adapter for diffusion models</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Ömer Karışman</a></span>
+              <a href="https://okaris.com">Ömer Karışman</a></span>
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -143,7 +143,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <div class="column is-3 has-text-centered">
+      <div class="column is-centered has-text-centered">
           <img src="./static/images/p2p-hero.jpg"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
@@ -180,13 +180,13 @@
     </div>
     <!--/ Abstract. -->
 
-     <div class="column is-3 has-text-centered">
+     <div class="column is-centered has-text-centered">
           <img src="./static/images/p2p-model.png"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
           <p class="is-bold">End Frame</p>
         </div>
-      <div class="column is-3 has-text-centered">
+      <div class="column is-centered has-text-centered">
           <img src="./static/images/p2p-training.png"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
