--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Person2Person Diffusion: One-Shot identity adapter for diffusion models">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>Person2Person Diffusion: One-Shot identity adapter for diffusion models</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
