--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <div class="column is-centered has-text-centered">
+       <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
           <img src="./static/images/p2p-hero.jpg"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
         </div>
+         <div>
       <h2 class="subtitle has-text-centered">
         <span class="dnerf">P2P Diffusion</span> turns selfie into any portrait.
       </h2>
@@ -157,11 +159,13 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-         <div class="column is-centered has-text-centered">
+         <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
           <img src="./static/images/p2p-model.png"
                class="interpolation-image"
                alt="Interpolation end reference image."/>
         </div>
+         </div>
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
