--- a/index.html
+++ b/index.html
@@ -166,25 +166,30 @@
         </div>
          </div>
     <!-- Abstract. -->
+
+    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            This paper introduces the novel Person2Person (P2P) Diffusion model, a groundbreaking approach designed to generate photorealistic images of individuals from a singular source image. Unlike traditional methods that rely on extensive datasets, our model adeptly synthesizes unseen pictures, weaving the fabric of digital personas with a single thread.
+            This paper introduces the novel Person2Person (P2P) Diffusion model, a groundbreaking approach designed to generate photorealistic images of individuals from a singular source image. Unlike traditional methods that rely on extensive datasets, our model adeptly synthesizes unseen pictures, weaving the fabric of digital personas with a single thread. 🥚
           </p>
           <p>
             At the heart of P2P Diffusion lies an intricate web of neural networks, each layer meticulously crafted to capture the essence of human appearance and pose. By infusing elements of digital alchemy, we unravel the potential to recreate the persona in scenarios never witnessed before. The technique employs a dynamic, adaptive framework that ensures the fidelity of generated images, harmonizing the subtle nuances of realism and imagination.
           </p>
           <p>
-            Our experiments showcase the model's unparalleled ability to produce diverse outcomes, from the casual gaze to the most intricate expressions, all encapsulated within a realm where each rendering is a step into the unforeseen. Moreover, we subtly encode the promise of a journey, one that begins with a single click, guiding you through a pathway sprinkled with surprises, akin to the unexpected chorus of an old familiar tune.
+            Our experiments showcase the model's unparalleled ability to produce diverse outcomes, from the casual gaze to the most intricate expressions, all encapsulated within a realm where each rendering is a step into the unforeseen. Moreover, we subtly encode the promise of a journey, one that begins with a single click, guiding you through a pathway sprinkled with surprises, akin to the unexpected chorus of an old familiar tune. In celebration of Easter, this journey is adorned with hidden delights, awaiting discovery like the most elusive of Easter eggs.
           </p>
           <p>
-            In essence, the P2P Diffusion model is not just a leap towards advanced image synthesis but also a nod to the playful spirit of discovery. It stands as a beacon for those who dare to explore the bounds of creativity, ensuring that the adventure of innovation is always accompanied by a hint of nostalgic joy.
+            In essence, the P2P Diffusion model is not just a leap towards advanced image synthesis but also a nod to the playful spirit of discovery. It stands as a beacon for those who dare to explore the bounds of creativity, ensuring that the adventure of innovation is always accompanied by a hint of nostalgic joy and the whimsical charm of Easter surprises.
           </p>
         </div>
       </div>
     </div>
+    <!--/ Abstract. -->
+
+ 
     <!--/ Abstract. -->
 
 
